# vless-top-bot

./: .env.example  .gitignore  README.md  pyproject.toml
deploy/systemd/: vless-top-bot.service.example
docs/: ARCHITECTURE.md
scripts/: prototype_latency_check.py
src/vless_top_bot/: __init__.py  __main__.py
src/vless_top_bot/adapters/storage/: user_repo.py
src/vless_top_bot/bot/: handlers.py
src/vless_top_bot/config/: settings.py
src/vless_top_bot/core/: latency_checker.py  models.py  ranking.py  subscription.py  vless_parser.py  youtube_checker.py
src/vless_top_bot/services/: check_service.py
